--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,68 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.App {
+  width: 100%;
+  height: 100vh;
+  padding-top: 10px;
+  font-family: Lato, sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.calculator-container {
+  width: fit-content;
+}
+
+.screen {
+  background-color: rgb(146, 146, 146);
+  height: 2em;
+  width: 11.65em;
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  text-align: right;
+  font-size: 2em;
+  border: 1px solid rgb(206, 201, 201);
+  color: white;
+}
+
+.screen::placeholder {
+  color: white;
+}
+
+.screen:focus {
+  outline: none;
+}
+
+.row div {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+button {
+  height: 4em;
+  width: 7em;
+  border: 1px solid rgb(206, 201, 201);
+}
+
+.buttons-grid {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+#zero {
+  width: 14em;
+}
+
+.orange {
+  background-color: orange;
+}
