--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,12 @@
 }
 
 .App {
-  width: 100%;
-  height: 100vh;
-  padding-top: 10px;
-  font-family: Lato, sans-serif;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
+  margin: 100px;
+  gap: 25px;
 }
 
 .calculator-container {
