--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+/*
 .App {
   display: flex;
   flex-direction: row;
@@ -11,9 +12,15 @@
   justify-content: center;
   margin: 100px;
   gap: 25px;
-}
+} */
 
 .calculator-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10%;
+}
+
+.calculator-grid {
   width: fit-content;
 }
 
@@ -28,6 +35,21 @@
   font-size: 2em;
   border: 1px solid rgb(206, 201, 201);
   color: white;
+}
+
+.quotes {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: larger;
+  margin: 20% 10%;
+  font-weight: 600;
+}
+
+.quotes span {
+  display: flex;
+  align-self: flex-end;
+  margin-right: 10%;
 }
 
 .screen::placeholder {
@@ -65,4 +87,27 @@ button {
 
 .orange {
   background-color: orange;
+}
+
+.home {
+  margin: 10%;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 8%;
+  align-items: center;
+}
+
+.nav-items {
+  display: flex;
+  gap: 15px;
+  font-size: large;
+  text-decoration: none;
+}
+
+.nav-items p {
+  text-decoration: none;
+  color: aqua;
 }
